👌 all documentation on swagger
